--- a/CS132-P7-UsingSTL/CS132-P7-UsingSTL.vcxproj.filters
+++ b/CS132-P7-UsingSTL/CS132-P7-UsingSTL.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CS132-P7-UsingSTL.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
