--- a/CS132-P7-UsingSTL/CS132-P7-UsingSTL.vcxproj
+++ b/CS132-P7-UsingSTL/CS132-P7-UsingSTL.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="infile1.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
