--- a/CS132-P7-UsingSTL/CS132-P7-UsingSTL.vcxproj.filters
+++ b/CS132-P7-UsingSTL/CS132-P7-UsingSTL.vcxproj.filters
@@ -19,4 +19,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="infile1.txt" />
+  </ItemGroup>
 </Project>
